Dynamic Video Player import, remove some bugs and unused codes

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+#test
+/test
+/src/app/test
+/src/app/api/test
+/src/components/test
