--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
   "dependencies": {
     "@consumet/extensions": "^1.5.6",
     "@flaticon/flaticon-uicons": "^3.2.1",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "hls.js": "^1.5.8",
-    "next": "14.1.0",
+    "lucide-react": "^0.447.0",
+    "next": "^14.2.14",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-responsive-carousel": "^3.2.23"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,7 +36,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.2.14",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
