--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.59.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "hls.js": "^1.5.8",
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
+    "next-themes": "^0.3.0",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
     "react": "^18.3.1",
