--- a/package.json
+++ b/package.json
@@ -3,53 +3,54 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "@consumet/extensions": "^1.5.6",
-      "@flaticon/flaticon-uicons": "^3.2.1",
-      "@radix-ui/react-accordion": "^1.2.1",
-      "@radix-ui/react-dialog": "^1.1.2",
-      "@radix-ui/react-icons": "^1.3.0",
-      "@radix-ui/react-scroll-area": "^1.2.0",
-      "@radix-ui/react-select": "^2.1.2",
-      "@radix-ui/react-separator": "^1.1.0",
-      "@radix-ui/react-slider": "^1.2.1",
-      "@radix-ui/react-slot": "^1.1.0",
-      "@radix-ui/react-tooltip": "^1.1.3",
-      "@tanstack/react-query": "^5.59.0",
-      "class-variance-authority": "^0.7.0",
-      "clsx": "^2.1.1",
-      "hls.js": "^1.5.8",
-      "lucide-react": "^0.447.0",
-      "next": "^14.2.14",
-      "next-themes": "^0.3.0",
-      "plyr": "^3.7.8",
-      "plyr-react": "^5.3.0",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1",
-      "react-player": "^2.16.0",
-      "react-responsive-carousel": "^3.2.23",
-      "shaka-player": "^4.11.7",
-      "sonner": "^1.5.0",
-      "swiper": "^11.1.14",
-      "tailwind-merge": "^2.5.3",
-      "tailwindcss-animate": "^1.0.7"
+        "@consumet/extensions": "^1.5.6",
+        "@flaticon/flaticon-uicons": "^3.2.1",
+        "@radix-ui/react-accordion": "^1.2.1",
+        "@radix-ui/react-dialog": "^1.1.2",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-scroll-area": "^1.2.0",
+        "@radix-ui/react-select": "^2.1.2",
+        "@radix-ui/react-separator": "^1.1.0",
+        "@radix-ui/react-slider": "^1.2.1",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-switch": "^1.1.1",
+        "@radix-ui/react-tooltip": "^1.1.3",
+        "@tanstack/react-query": "^5.59.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "hls.js": "^1.5.8",
+        "lucide-react": "^0.447.0",
+        "next": "^14.2.14",
+        "next-themes": "^0.3.0",
+        "plyr": "^3.7.8",
+        "plyr-react": "^5.3.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-player": "^2.16.0",
+        "react-responsive-carousel": "^3.2.23",
+        "shaka-player": "^4.11.7",
+        "sonner": "^1.5.0",
+        "swiper": "^11.1.14",
+        "tailwind-merge": "^2.5.3",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
-      "@types/node": "^20",
-      "@types/react": "^18",
-      "@types/react-dom": "^18",
-      "autoprefixer": "^10.0.1",
-      "eslint": "^8",
-      "eslint-config-next": "^14.2.14",
-      "postcss": "^8",
-      "prettier": "^3.2.5",
-      "prettier-plugin-tailwindcss": "^0.5.11",
-      "tailwindcss": "^3.3.0",
-      "typescript": "^5"
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "^14.2.14",
+        "postcss": "^8",
+        "prettier": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.5.11",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
     }
-  }
+}
