--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@radix-ui/react-accordion": "^1.2.1",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-popover": "^1.1.2",
         "@radix-ui/react-scroll-area": "^1.2.0",
         "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-separator": "^1.1.0",
@@ -24,6 +25,7 @@
         "@tanstack/react-query": "^5.59.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "cmdk": "^1.0.0",
         "hls.js": "^1.5.8",
         "lucide-react": "^0.447.0",
         "next": "^14.2.14",
